--- a/project.config
+++ b/project.config
@@ -1,2 +1,4 @@
 [access]
 	inheritFrom = releng
+[project]
+	description = A multi-container docker environment for testing Release Engineering work and proof-of-concepts
