--- a/config.env
+++ b/config.env
@@ -1,21 +1,12 @@
-#!/bin/bash
-# SPDX-License-Identifier: EPL-1.0
-##############################################################################
-# Copyright (c) 2017 The Linux Foundation and others.
-#
-# All rights reserved. This program and the accompanying materials
-# are made available under the terms of the Eclipse Public License v1.0
-# which accompanies this distribution, and is available at
-# http://www.eclipse.org/legal/epl-v10.html
-##############################################################################
-
+##
+# Gerrit
+##
 #GERRIT_INIT_ARGS=" \
 #  --install-plugin=download-commands \
 #  --install-plugin=commit-message-length-validator \
 #  --install-plugin=replication \
 #  --install-plugin=delete-project \
 # "
-
 WEBURL=http://gerrit.localhost
 #DATABASE_TYPE=postgresql
 AUTH_TYPE=LDAP
@@ -30,6 +21,32 @@ LDAP_GROUPBASE=ou=Groups,dc=example,dc=org
 LDAP_GROUPMEMBERPATTERN=(member=${dn})
 LDAP_LOCALUSERNAMETOLOWERCASE=true
 
-# nginx-proxy
-VIRTUAL_HOST=gerrit.localhost
-VIRTUAL_PORT=8080
+##
+# Jenkins
+##
+JAVA_OPTS="-Djenkins.install.runSetupWizard=false"
+JENKINS_OPTS=""
+JENKINS_ADMIN_USER=admin
+JENKINS_ADMIN_PASSWORD=password
+
+##
+# Postgres
+##
+POSTGRES_USER=gerrit2
+POSTGRES_PASSWORD=gerrit
+POSTGRES_DB=reviewdb
+
+##
+# OpenLDAP
+##
+LDAP_ORGANISATION=Test Org
+LDAP_DOMAIN=example.org
+# Only set this if you want it different from the LDAP_DOMAIN
+LDAP_BASE_DN=dc=example,dc=org
+LDAP_READONLY_USER=true
+LDAP_READONLY_USER_USERNAME=readonly
+LDAP_READONLY_USER_PASSWORD=readonly
+LDAP_ADMIN_PASSWORD=admin
+LDAP_TLS=false
+LDAP_TLS_ENFORCE=false
+LDAP_REMOVE_CONFIG_AFTER_SETUP=false
