Configure GLOBAL_JJB_VERSION Through Environment
Pulling GLOBAL_JJB_VERSION from the environment allows for creating the initial
ci-management repo with a specific global-jjb version without having to
rebuild the init container.

This also modifies paths to the 'wait-for-it.sh' script to be absolute.

Change-Id: Ic2e7c2a9871fda176a678e245a57d1fde898c0a9
Signed-off-by: Trevor Bramwell <tbramwell@linuxfoundation.org>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     init:
         build: ./init
         container_name: releng-init
+        environment:
+            - GLOBAL_JJB_VERSION=v0.10.2
         volumes:
             - init:/init/
             - jenkins:/jenkins
