Setup and Configure Nexus
Adds the Nexus (v2) container and does the following:

 - Creates the initial 'logs' repository
 - Configures Jenkins to be able to talk to Nexus by creating a
   settings.xml, and installing the needed packages on the
   jenkins-agent.
 - Installs required plugins for the jjb logs publishing job, including
   downloading PostBuildScript during the Jenkins container build.
 - Directs requests to 'jenkins.localhost', etc, on the jenkins-agent
   through the nginx container.
 - Sets the Jenkins Markup Formatter to 'Safe HTML' so the logs link can
   be displayed.

Change-Id: I63c783156bcffd1699e9ca7fe1a114ee2ed54bed
Signed-off-by: Trevor Bramwell <tbramwell@linuxfoundation.org>

--- a/config.env
+++ b/config.env
@@ -1,5 +1,6 @@
 ##
 # Gerrit
+#   https://hub.docker.com/r/openfrontier/gerrit
 ##
 #GERRIT_INIT_ARGS=" \
 #  --install-plugin=download-commands \
@@ -23,6 +24,7 @@ LDAP_LOCALUSERNAMETOLOWERCASE=true
 
 ##
 # Jenkins
+#  https://hub.docker.com/r/jenkins/jenkins
 ##
 JENKINS_OPTS=""
 JENKINS_ADMIN_USER=admin
@@ -43,6 +45,7 @@ JJB_JENKINS_HOSTNAME=jenkins
 
 ##
 # Postgres
+#   https://hub.docker.com/r/_/postgres
 ##
 POSTGRES_USER=gerrit2
 POSTGRES_PASSWORD=gerrit
@@ -50,6 +53,7 @@ POSTGRES_DB=reviewdb
 
 ##
 # OpenLDAP
+#   https://hub.docker.com/r/osixia/openldap
 ##
 LDAP_ORGANISATION=Test Org
 LDAP_DOMAIN=example.org
@@ -62,3 +66,13 @@ LDAP_ADMIN_PASSWORD=admin
 LDAP_TLS=false
 LDAP_TLS_ENFORCE=false
 LDAP_REMOVE_CONFIG_AFTER_SETUP=false
+
+##
+# Nexus
+#   https://hub.docker.com/r/sonatype/nexus/
+##
+#CONTEXT_PATH="/nexus"
+#MAX_HEAP="768m"
+#MIN_HEAP="256m"
+#JAVA_OPTS="-server -XX:MaxPermSize192m -Djava.net.preferIPv4Stack=true"
+#LAUNCHER_CONF="./conf/jetty.xml ./conf/jetty-requestlog.xml"
