--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
         links:
             - jenkins
             - gerrit
+            - nexus
     ldap:
         image: "osixia/openldap:$OPENLDAP_CONTAINER_VERSION"
         container_name: releng-ldap
@@ -43,13 +44,16 @@ services:
         links:
             - ldap
             - nginx
-            - jenkins-agent
     jenkins-agent:
         build: ./jenkins/agent
         container_name: releng-agent
         env_file: config.env
         ports:
             - "22"
+        links:
+            - "nginx:jenkins.localhost"
+            - "nginx:nexus.localhost"
+            - "nginx:gerrit.localhost"
     gerrit:
         image: "openfrontier/gerrit:$GERRIT_CONTAINER_VERSION"
         container_name: releng-gerrit
@@ -69,6 +73,21 @@ services:
         links:
             - ldap
             - nginx
+    nexus:
+        image: "sonatype/nexus:$NEXUS_CONTAINER_VERSION"
+        container_name: releng-nexus
+        env_file: config.env
+        environment:
+            - VIRTUAL_HOST=nexus.localhost
+            - VIRTUAL_PORT=8081
+        volumes:
+            - nexus:/sonatype-work
+        expose:
+            - "8081"
+        depends_on:
+            - nginx
+        links:
+            - nginx
     postgres:
         image: postgres:latest
         env_file: config.env
@@ -85,4 +104,5 @@ services:
 volumes:
     jenkins:
     gerrit:
+    nexus:
     init:
