Docker Build support on the Jenkins Agent
Because Docker-in-Docker builds are quite challenging to do, this change
configures the Jenkins Agent to use the host docker daemon.

Note: Due to the way docker manages permissions, then GID of the docker
user inside the Jenkins agent needs to match the host docker GID.

Change-Id: Ic10fa6f46adf6af448ceb792951a61c2548b9b34
Signed-off-by: Trevor Bramwell <tbramwell@linuxfoundation.org>

--- a/jenkins/agent/Dockerfile
+++ b/jenkins/agent/Dockerfile
@@ -5,7 +5,23 @@ RUN DEBIAN_FRONTEND=noninteractive \
     && apt-get install --no-install-recommends -y python python-pip \
        python-tox python-dev \
        build-essential zip facter xmlstarlet \
+       apt-transport-https ca-certificates \
+       curl software-properties-common
+
+RUN curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
+RUN add-apt-repository \
+   "deb [arch=amd64] https://download.docker.com/linux/debian \
+   $(lsb_release -cs) \
+   stable"
+
+RUN DEBIAN_FRONTEND=noninteractive \
+    apt-get update \
+    && apt-get install -y docker-ce \
     && apt-get clean
 
 RUN /usr/bin/pip install --upgrade setuptools
 RUN /usr/bin/pip install virtualenv
+
+# Set the docker group to my host docker group ID
+RUN groupmod -g 129 docker
+RUN usermod -aG docker jenkins
