--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,7 @@ services:
     jenkins-agent:
         build: ./jenkins/agent
         container_name: releng-agent
+        privileged: true
         env_file: config.env
         ports:
             - "22"
@@ -54,6 +55,8 @@ services:
             - "nginx:jenkins.localhost"
             - "nginx:nexus.localhost"
             - "nginx:gerrit.localhost"
+        volumes:
+            - /var/run/docker.sock:/var/run/docker.sock:rw
     gerrit:
         image: "openfrontier/gerrit:$GERRIT_CONTAINER_VERSION"
         container_name: releng-gerrit
