Start replicating to GitHub
Signed-off-by: Andrew Grimberg <agrimberg@linuxfoundation.org>

--- a/project.config
+++ b/project.config
@@ -2,3 +2,5 @@
 	inheritFrom = releng
 [project]
 	description = A multi-container docker environment for testing Release Engineering work and proof-of-concepts
+[access "refs/*"]
+	read = group GitHub Replication
