Install ansible plugin
Ansible plugin also requires ansible binary to be installed
on the docker container.

Include the required dependencies and also format the Dockerfile
to make the dependencies readable.

Change-Id: I3e9e9ce92399e766dbce0c7d068020d8a10764ab
Signed-off-by: Anil Belur <abelur@linuxfoundation.org>

--- a/jenkins/agent/Dockerfile
+++ b/jenkins/agent/Dockerfile
@@ -1,11 +1,21 @@
 FROM jenkinsci/ssh-slave
 
 RUN DEBIAN_FRONTEND=noninteractive \
-    apt-get update \
-    && apt-get install --no-install-recommends -y python python-pip \
-       python-tox python-dev \
-       build-essential zip facter xmlstarlet \
-    && apt-get clean
+    apt-get update && \
+    apt-get install --no-install-recommends -y \
+       build-essential \
+       facter \
+       libffi-dev \
+       libssl-dev \
+       python \
+       python-pip \
+       python-tox \
+       python-dev \
+       xmlstarlet \
+       zip && \
+    apt-get clean
 
 RUN /usr/bin/pip install --upgrade setuptools
-RUN /usr/bin/pip install virtualenv
+RUN /usr/bin/pip install --upgrade virtualenv
+RUN /usr/bin/pip install --upgrade cryptography
+RUN /usr/bin/pip install --upgrade ansible
