Allow running multiple clusters of ci-workshop
it was not possible to run ci-workshop twice
you can now change network setting and container names
This allows multiple clusters of ci-workshop to run
on the same machine and interact with eachother.

Change-Id: I9bee5b7a27276d51df156ac2131809d018ad0798
Signed-off-by: Aric Gardner <agardner@linuxfoundation.org>

--- a/.env
+++ b/.env
@@ -1,7 +1,19 @@
 ##
-# Global Options
+# Global Configuration
 ##
 JENKINS_CONTAINER_VERSION=lts
 GERRIT_CONTAINER_VERSION=latest
 NEXUS_CONTAINER_VERSION=oss
 OPENLDAP_CONTAINER_VERSION=latest
+
+SUBNET=172.20.0.1
+CIDR=24
+
+RELENGINIT=init1
+RELENGLDAP=ldap1
+RELENGJENKINS=jenkins1
+RELENGAGENT=agent1
+RELENGGERRIT=gerrit1
+RELENGNEXUS=nexus1
+RELENGINGRESS=ingress1
+RELENGPOSTGRES=postgres1
