Zuul Support for ci-workshop
This adds the following services to the ci-workshop docker-compose file:

 - zuul-executor
 - zuul-scheduler
 - zookeeper
 - nodepool-launcher

These are setup and configured to talk to Gerrit and run gate and verify
jobs against the ci-management repo.

Change-Id: I181fa4478bc52aa268020f91e696efd654ba29e9
Signed-off-by: Trevor Bramwell <tbramwell@linuxfoundation.org>

--- a/config.env
+++ b/config.env
@@ -76,3 +76,18 @@ LDAP_REMOVE_CONFIG_AFTER_SETUP=false
 #MIN_HEAP="256m"
 #JAVA_OPTS="-server -XX:MaxPermSize192m -Djava.net.preferIPv4Stack=true"
 #LAUNCHER_CONF="./conf/jetty.xml ./conf/jetty-requestlog.xml"
+
+##
+# Zookeeper
+#  https://hub.docker.com/_/zookeeper/
+##
+# Note: If running multiple zookeeper instances, unset STANDALONE_MODE, and
+# configure ZOO_SERVERS and ZOO_MY_ID for each instance
+ZOO_STATANDALONE_ENABLED=true
+#ZOO_SERVERS="server.1=127.0.0.1:2888:3888 server.2=127.0.0.1:2888:3888"
+#ZOO_TICK_TIME=2000
+#ZOO_INIT_LIMIT=5
+#ZOO_SYNC_LIMIT=2
+#ZOO_MAX_CLIENT_CNXNS=60
+#ZOO_AUTOPURGE_PURGEINTERVAL=0
+#ZOO_AUTOPURGE_SNAPRETAINCOUNT=3
