Zuul Support for ci-workshop
This adds the following services to the ci-workshop docker-compose file:

 - zuul-executor
 - zuul-scheduler
 - zookeeper
 - nodepool-launcher

These are setup and configured to talk to Gerrit and run gate and verify
jobs against the ci-management repo.

Change-Id: I181fa4478bc52aa268020f91e696efd654ba29e9
Signed-off-by: Trevor Bramwell <tbramwell@linuxfoundation.org>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,6 @@
 ---
 version: '3'
 services:
-    init:
-        build: ./init
-        container_name: releng-init
-        environment:
-            - GLOBAL_JJB_VERSION=v0.19.2
-        volumes:
-            - init:/init/
-            - jenkins:/jenkins
-        links:
-            - jenkins
-            - gerrit
-            - nexus
     ldap:
         image: "osixia/openldap:$OPENLDAP_CONTAINER_VERSION"
         container_name: releng-ldap
@@ -23,37 +11,6 @@ services:
             - ./ldap/bootstrap/groups.ldif:/container/service/slapd/assets/config/bootstrap/ldif/custom/50-groups.ldif
         ports:
             - "636:636"
-    jenkins:
-        build:
-            context: ./jenkins
-            args:
-                - JENKINS_VERSION=$JENKINS_CONTAINER_VERSION
-        container_name: releng-jenkins
-        env_file: config.env
-        environment:
-            - JAVA_OPTS="-Djenkins.install.runSetupWizard=false"
-            - VIRTUAL_HOST=jenkins.localhost
-            - VIRTUAL_PORT=8080
-        volumes:
-            - jenkins:/var/jenkins_home
-        expose:
-            - "8080"
-        depends_on:
-            - ldap
-            - nginx
-        links:
-            - ldap
-            - nginx
-    jenkins-agent:
-        build: ./jenkins/agent
-        container_name: releng-agent
-        env_file: config.env
-        ports:
-            - "22"
-        links:
-            - "nginx:jenkins.localhost"
-            - "nginx:nexus.localhost"
-            - "nginx:gerrit.localhost"
     gerrit:
         image: "openfrontier/gerrit:$GERRIT_CONTAINER_VERSION"
         container_name: releng-gerrit
@@ -90,6 +47,7 @@ services:
             - nginx
     postgres:
         image: postgres:latest
+        container_name: releng-postgres
         env_file: config.env
         expose:
             - "5432"
@@ -101,7 +59,5 @@ services:
         volumes:
             - /var/run/docker.sock:/tmp/docker.sock:ro
 volumes:
-    jenkins:
     gerrit:
     nexus:
-    init:
