Convert Init Container and Scripts to Ansible
The init container ran a script that was not fully idempotent. Migrating
that script to Ansible allows for strong idempotency (ensuring things
that change get changed), and reduces the overhead of maintaining bash.

This change also splits up the docker-compose.yml file in preperation
for Zuul support.

Jenkins groovy init scripts are renamed to run-parts syntax in order to
ensure ordering, and the Gerrit groovy configuration is set to run
immediately instead of waiting for plugins to finish loading.

Change-Id: Ib6d355e15a13a6d03769c6a8c0b3bfb6056dd3e7
Signed-off-by: Trevor Bramwell <tbramwell@linuxfoundation.org>

--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -25,23 +25,23 @@ RUN curl --fail -sSL \
 
 ENV JENKINS_GROOVY_INIT /usr/share/jenkins/ref/init.groovy.d/
 
-# Configure Basic Security
-COPY scripts/basic-security-setup.groovy $JENKINS_GROOVY_INIT
-
-# Configure LDAP
-COPY scripts/ldap.groovy $JENKINS_GROOVY_INIT
-
-# Configure Gerrit-Trigger
-COPY scripts/gerrit-config.groovy $JENKINS_GROOVY_INIT
-
 # Set Global Properties
-COPY scripts/global-properties.groovy $JENKINS_GROOVY_INIT
-
-# Create Jenkins SSH Agent
-COPY scripts/create-jenkins-agent.groovy $JENKINS_GROOVY_INIT
+COPY scripts/00_global-properties.groovy $JENKINS_GROOVY_INIT
 
 # Create JJB INI in Config File Plugin
-COPY scripts/create-jjbini.groovy $JENKINS_GROOVY_INIT
+COPY scripts/10_create-jjbini.groovy $JENKINS_GROOVY_INIT
+
+# Create Jenkins SSH Agent
+COPY scripts/20_create-jenkins-agent.groovy $JENKINS_GROOVY_INIT
+
+# Configure Basic Security
+COPY scripts/30_basic-security-setup.groovy $JENKINS_GROOVY_INIT
 
 # Create Nexus settings.xml
-COPY scripts/create-nexus-settings.groovy $JENKINS_GROOVY_INIT
+COPY scripts/40_create-nexus-settings.groovy $JENKINS_GROOVY_INIT
+
+# Configure Gerrit-Trigger
+COPY scripts/50_gerrit-config.groovy $JENKINS_GROOVY_INIT
+
+# Configure LDAP
+COPY scripts/60_ldap.groovy $JENKINS_GROOVY_INIT
