Move Nexus Context path to '/'
This reduces the confusion when trying to access Nexus at
'nexus.localhost' as the default context is '/nexus'. Without going
directly to 'nexus.localhost/nexus' users were given a 404 response.

Change-Id: I024f447a60f53f35626752f44f556c4883421149
Signed-off-by: Trevor Bramwell <tbramwell@linuxfoundation.org>

--- a/config.env
+++ b/config.env
@@ -37,9 +37,9 @@ JENKINS_SLAVE_SSH_PUBKEY=ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDUX11sDBXacCE/LBd
 #   Global Properties for Jenkins
 ##
 JJB_GIT_URL=ssh://gerrit:29418/
-JJB_NEXUS_URL=http://nexus.localhost/nexus
+JJB_NEXUS_URL=http://nexus.localhost
 # JJB_NEXUSPROXY=http://nexus:8081/nexus
-JJB_LOGS_SERVER=http://nexus.localhost/nexus/content/sites/logs
+JJB_LOGS_SERVER=http://nexus.localhost/content/sites/logs
 JJB_SILO=production
 JJB_JENKINS_HOSTNAME=jenkins
 
@@ -71,7 +71,7 @@ LDAP_REMOVE_CONFIG_AFTER_SETUP=false
 # Nexus
 #   https://hub.docker.com/r/sonatype/nexus/
 ##
-#CONTEXT_PATH="/nexus"
+CONTEXT_PATH=/
 #MAX_HEAP="768m"
 #MIN_HEAP="256m"
 #JAVA_OPTS="-server -XX:MaxPermSize192m -Djava.net.preferIPv4Stack=true"
