Fix Jenkins Credentials
The new version of Jenkins no longer allows SSH credentials to come from
the master filesystem, so instead they are uploaded using the
jenkins-cli.jar.

An initial credential setting is created when Jenkins starts with the
private key added later.

Change-Id: Id4e80625cca06a5047f592c58ee6bae1b698228a
Signed-off-by: Trevor Bramwell <tbramwell@linuxfoundation.org>

--- a/init/Dockerfile
+++ b/init/Dockerfile
@@ -13,6 +13,7 @@ ENV CI_SYSTEM=jenkins
 ENV ANSIBLE_STDOUT_CALLBACK=yaml
 
 RUN DEBIAN_FRONTEND=noninteractive apt-get update && apt-get install -yq \
+  openjdk-8-jdk \
   python3-apt \
   && apt-get clean
 RUN pip install --no-cache-dir ansible docker-py
