--- a/init/playbooks/site.yaml
+++ b/init/playbooks/site.yaml
@@ -23,16 +23,16 @@
             method: 'POST'
             body: "username=workshop&password=workshop"
             status_code: 302
-      - name: Remove ssh-rsa from sshkey
-        set_fact:
-            workshop_ssh_key_modified: "{{ lookup('file', '{{ workshop_ssh_keyfile }}.pub') }}"
       - name: Upload sshkey to Admin user
         uri:
             url: 'http://gerrit:8080/a/accounts/self/sshkeys'
             method: 'POST'
             user: 'workshop'
             password: 'workshop'
-            body: "{{ workshop_ssh_key_modified }}"
+            force_basic_auth: true
+            headers:
+                Content-Type: 'text/plain'
+            body: "{{ lookup('file', '{{ workshop_ssh_keyfile }}.pub') }}"
             status_code: 201
       - name: Wait for Gerrit SSH Interface
         wait_for:
