add artifactory to start testing for zowe
Issue: RELENG-1938
Change-Id: If0c872e29b79d8c647da2d5c499bc148223dde18
Signed-off-by: Pono <dtakamori@contractor.linuxfoundation.org>

--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@
 # Global Options
 ##
 JENKINS_CONTAINER_VERSION=lts
-GERRIT_CONTAINER_VERSION=latest
+GERRIT_CONTAINER_VERSION=2.14.x
 NEXUS_CONTAINER_VERSION=oss
 OPENLDAP_CONTAINER_VERSION=latest
+ARTIFACTORY_CONTAINER_VERSION=latest
